# ShowYourLocalStripes

./: .gitignore  README.md
.github/workflows/: deploy-backend-from-main.yml  pr-check.yml
backend/: .flake8  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  prod.env.encrypted  pyproject.toml
backend/api/: __init__.py  currency.py  db.py  main.py  models.py  query.py  settings.py  store.py  utils.py  weather.py
backend/deploy/: cert-manager-issuer.yaml  deployment_backend_api.yml
backend/migrations/: env.py
backend/migrations/versions/: 4445af6be318_init.py  4eebef954517_added_currency.py  6e56615db303_deleted_price_table.py  b6b43fb509c3_typo_in_price.py  b6f5f7fa629a_lat_lon_changes.py  f9cea00240e0_adding_promo_code.py  fe784ec9107f_colours_change.py
backend/tests/: conftest.py  test_api.py
backend/tests/seeds/: colour.json  currency.json  item.json  store.json
frontend/: .gitignore  README.md  nuxt.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/: cta.vue  extraInfo.vue  faq.vue  footerBottom.vue  graphic.vue  headerTop.vue  modalRequests.vue  tshirt.vue
frontend/layouts/: default.vue  error.vue
frontend/pages/: index.vue
frontend/stores/: shared.ts
